--- a/lib/ligerUI/skins/Aqua/css/ligerui-grid.css
+++ b/lib/ligerUI/skins/Aqua/css/ligerui-grid.css
@@ -121,7 +121,7 @@ position: relative;
 position: relative; width:100%;
     top: 0px;
     left: 0px; 
-	background-color:#f0f8ff;
+	background-color:#f1f6fd;
 }  
 .l-grid-body-table
 {
