--- a/css/homepagecss/usermanger.css
+++ b/css/homepagecss/usermanger.css
@@ -1,6 +1,9 @@
  
  body{
     background-color: #f1f6fd;
+	margin:0;
+	padding:0;
+	font-size:16px;
 }
 .panel-title{
     text-align: left;!important;
