--- a/jquery-easyui/themes/default/easyui.css
+++ b/jquery-easyui/themes/default/easyui.css
@@ -1627,7 +1627,7 @@
 .datagrid-view1,
 .datagrid-view2 {
   position: absolute;
-  overflow: hidden;
+  overflow: scroll;
   top: 0;
 }
 .datagrid-view1 {
