--- a/lib/ligerUI/skins/Aqua/css/ligerui-dialog.css
+++ b/lib/ligerUI/skins/Aqua/css/ligerui-dialog.css
@@ -100,9 +100,8 @@
 .l-dialog-tl{ background:none;border-bottom: 1px solid #f5f5f5;}
 .l-dialog-tc{font-size: 14px;font-weight: bold;height:40px;line-height: 29px;background: -webkit-gradient(linear, 0 0, 0 100%, from(#353c49), to(#353c49)); padding-left: 10px;background: -o-linear-gradient(top, #EFF5FE, #D6E4F4);_background:#EFF5FE;
 background: -ms-linear-gradient(top, #EFF5FE 0%,#D6E4F4 100%);
-background: linear-gradient(top, #EFF5FE, #D6E4F4);background: -moz-linear-gradient(top, #EFF5FE, #D6E4F4);
+background: linear-gradient(top, #EFF5FE, #D6E4F4);/*background: -moz-linear-gradient(top, #EFF5FE, #D6E4F4);*/
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EFF5FE', endColorstr='#D6E4F4');
-
 }
 .l-dialog-tr{background:none;border-bottom: 1px solid #f5f5f5;}
 .l-dialog-bl{background:none;}
@@ -139,7 +138,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EFF5FE', endC
 .l-dialog-extend-disabled{background-position:-68px -32px;cursor:default;}
 
 .l-dialog-tc-inner{ position:relative;height:26px; line-height:26px; width:100%;  }
-.l-dialog-title {  color:#ffffff;font-weight:bold; font-weight:700; text-shadow:none; padding-left:11px; padding-right:20px; text-align:left; padding-top:0px;background-color:#353c49} 
+.l-dialog-title {  color:#ffffff;font-weight:bold; font-weight:700; text-shadow:none; padding-left:11px; padding-right:20px; text-align:left; padding-top:0px;} 
 
 .l-dialog-content{ padding-left:18px; padding-top:14px;padding-bottom:12px; overflow:auto;} 
 .l-dialog-content-noimage {padding-left:6px; padding-top:10px;padding-bottom:10px;}
