--- a/jquery-easyui/demo.css
+++ b/jquery-easyui/demo.css
@@ -267,7 +267,7 @@ ul li a:hover,  ul li a:active{
     margin-left: 19px;
 }
 #c_center{
-	padding:10px;
+	/*padding:10px;*/
     height: 80%;
 }
 
@@ -302,7 +302,7 @@ ul li a{
     padding-left: 16px;
 }
 .current{
-    background: url("../css/img/Selected.png") 0px 8px no-repeat;
+    background: url("../css/img/Selected.png") 0px 6px no-repeat;
 
 }
 
